Finalize Databricks native adapter integration